change CrawlingTest project to maven